--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,28 @@
+# Web Framework
 Flask==2.0.1
-pandas==1.3.3
-scikit-learn==0.24.2
-numpy==1.21.2
-folium==0.14.0
-geopy==2.3.0
 Flask-SQLAlchemy==2.5.1
 Werkzeug==2.0.1
+
+# Data Processing and Analysis
+pandas==1.3.3
+numpy==1.21.2
+
+# Machine Learning
+scikit-learn==0.24.2
+
+# Visualization
+matplotlib==3.1.3
+seaborn==0.11.2
+
+# Mapping and Geocoding
+folium==0.14.0
+geopy==2.3.0
+
+# HTTP Requests
+requests==2.31.0
+
+# Database
+SQLAlchemy==1.4.23
+
+# Development Tools
+python-dotenv==0.19.0
