--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,14 @@
-Flask==2.0.1
-Flask-SQLAlchemy==2.5.1
-Werkzeug==2.0.1
-
-pandas==1.3.3
-numpy==1.21.2
-scikit-learn==0.24.2
-
-matplotlib==3.1.3
-seaborn==0.11.2
-
+Flask==2.2.5
+Flask-SQLAlchemy==3.1.1
+Werkzeug==2.2.3
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.3.2
+matplotlib==3.8.4
+seaborn==0.12.2
 folium==0.14.0
 geopy==2.3.0
-
 requests==2.31.0
-
-SQLAlchemy==1.4.23
-python-dotenv==0.19.0
+SQLAlchemy==2.0.29
+python-dotenv==1.0.1
+gunicorn==21.2.0  # for Render deployment
